dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan_Task_Dependency__c.object
<CustomObject>
    <description>Holds dependency definition for defined Prov Plan tasks</description>
    <fields>
        <fullName>Dependency_Action__c</fullName>
        <label>Dependency Action</label>
        <picklist>
            <picklistValues>
                <fullName>Finish to start</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finish to finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start to start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start to finish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependency_Type__c</fullName>
        <inlineHelpText>Select Provisioning Plan for Intra-Workflow dependency, select Provisioning Plan Dependency for Inter-Workflow dependencies.</inlineHelpText>
        <label>Dependency Type</label>
        <picklist>
            <picklistValues>
                <fullName>Provisioning Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Plan Dependency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependent_Name__c</fullName>
        <formula>IF( Provisioning_Plan__c = Dependent_Task__r.Provisioning_Plan__c , HYPERLINK( &apos;/&apos;+ Dependent_Task__c , Dependent_Task__r.Name+&apos; - &apos;+Dependent_Task_Name__c ), HYPERLINK( &apos;/&apos;+ Dependent_Task__c , Dependent_Task__r.Name+&apos; - &apos;+Dependent_Task_Name__c+&apos; (&apos;+ Dependent_Task__r.Provisioning_Plan__r.Name +&apos; - &apos; + Dependent_Task__r.Provisioning_Plan__r.Plan_Name__c +&apos;)&apos; ))</formula>
        <label>Dependent Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task_Name__c</fullName>
        <formula>Dependent_Task__r.Task_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Task__c</fullName>
        <label>Dependent Task</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Dependency On</relationshipLabel>
        <relationshipName>Predecessor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Name__c</fullName>
        <formula>IF( Provisioning_Plan__c = Predecessor__r.Provisioning_Plan__c , HYPERLINK( &apos;/&apos;+Predecessor__c , Predecessor__r.Name+&apos; - &apos;+Predecessor_Task_Name__c ), HYPERLINK( &apos;/&apos;+Predecessor__c , Predecessor__r.Name+&apos; - &apos;+Predecessor_Task_Name__c+&apos; (&apos;+ Predecessor__r.Provisioning_Plan__r.Name +&apos; - &apos;+ Predecessor__r.Provisioning_Plan__r.Plan_Name__c +&apos;)&apos; ))</formula>
        <label>Predecessor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Name__c</fullName>
        <formula>Predecessor__r.Task_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <label>Predecessor</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Predecessor To</relationshipLabel>
        <relationshipName>Dependency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan_Dependency__c</fullName>
        <label>Provisioning Plan Dependency</label>
        <referenceTo>Provisioning_Plan_Dependency__c</referenceTo>
        <relationshipLabel>Provisioning Plan Task Dependencies</relationshipLabel>
        <relationshipName>Provisioning_Plan_Task_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <label>Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Provisioning Plan Task Dependencies</relationshipLabel>
        <relationshipName>Provisioning_Plan_Task_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Provisioning Plan Task Dependency</label>
    <nameField>
        <displayFormat>PTD{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Plan Task Dependencies</pluralLabel>
    <recordTypes>
        <fullName>Provisioning_Plan</fullName>
        <active>true</active>
        <label>Provisioning Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provisioning_Plan_Dependency</fullName>
        <active>false</active>
        <label>Provisioning Plan Dependency</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Provisioning_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
      ISPICKVAL(Dependency_Type__c,&apos;Provisioning Plan&apos;),
      ISNULL( Provisioning_Plan__c )
)</errorConditionFormula>
        <errorDisplayField>Provisioning_Plan__c</errorDisplayField>
        <errorMessage>Provisioning Plan is required for &quot;Provisioning Plan&quot; Dependency Types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Provisioning_Plan_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    ISPICKVAL(Dependency_Type__c, &quot;Provisioning Plan Dependency&quot;),
   ISNULL( Provisioning_Plan_Dependency__c )
)</errorConditionFormula>
        <errorDisplayField>Provisioning_Plan_Dependency__c</errorDisplayField>
        <errorMessage>Provisioning Plan Dependency is required for &quot;Provisioning Plan Dependency&quot; dependency types.</errorMessage>
    </validationRules>
</CustomObject>